FullQa New/src/FinancialForce Revenue Management/objects/RecognitionStagingTablePrimary__c.object
<CustomObject>
    <description>Temporary storage for intermediary Revenue Recognition data (primary level data).</description>
    <fields>
        <fullName>AccountId__c</fullName>
        <label>Account Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountName__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ErrorMessage__c</fullName>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FutureTransactions__c</fullName>
        <label>Future Transactions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GenDate__c</fullName>
        <label>Generation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GroupName__c</fullName>
        <label>Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HyperlinkId__c</fullName>
        <label>Hyperlink Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreviouslyRecognized__c</fullName>
        <label>Previously Recognized</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RecognitionDate__c</fullName>
        <label>Recognition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RecordId__c</fullName>
        <label>Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ToRecognizeThisPeriod__c</fullName>
        <label>To Recognize This Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalRevenue__c</fullName>
        <label>Total Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Recognition Staging Table Primary</label>
    <nameField>
        <displayFormat>RSP-{00000000}</displayFormat>
        <label>Recognition Staging Table Primary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recognition Staging Table Primary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>